# aoc2023_c

./: .gitlab-ci.yml  CMakeLists.txt
src/: CMakeLists.txt  day01.c  day01.h  main.c
test/: CMakeLists.txt  day1_test.c
